	     install the ofed-kmp package from Novell for the patchless client.
	     Note that the ofed-kmp that Novell ships may not exactly match the
	     kernel version but should still be compatible.

Severity   : enhancement
Bugzilla   : 22514
Description: Update RHEL5.5 kernel to 2.6.18-194.17.1.el5
             Update OEL5.5  kernel to 2.6.18-194.17.1.0.1.el5.

--------------------------------------------------------------------------------

2010-07-15  Oracle, Inc.
       * version 2.0.0
       * Server support for kernels:
         2.6.18-164.11.1.el5 (RHEL 5)
         2.6.18-164.11.1.0.1.el5 (OEL 5)
       * Client support for unpatched kernels:
	 (see http://wiki.lustre.org/index.php?title=Patchless_Client)
         2.6.18-164.11.1.el5 (RHEL 5),
         2.6.18-164.11.1.0.1.el5 (OEL 5)
         2.6.16.60-0.42.8 (SLES 10),
         2.6.27.19-5 (SLES11)
	 2.6.29.4-167.fc11 (FC11)
       * Recommended e2fsprogs version: 1.41.10-sun2

Severity   : enhancement
Bugzilla   : 22481
Description: Distribute lfs_migrate script with lustre
Details    : The lfs_migrate mentioned in the manual is now included in the
             lustre tree in lustre/scripts and will distributed in lustre RPMs.

Severity   : enhancement
Bugzilla   : 15253
Description: Failover nid list added to import proc file.

Severity   : enhancement
Bugzilla   : 22864
Description: "som_preview" mount option required to use SOM
Details    : The clients will need to use som_preview mount option
             in order to use SOM. 

Bugzilla   : 22850
Description: Lustre does not do 1MB IOs to HW RAID
Details    : Bump MAX_PHYS/HW_SEGMENTS and SG_ALL to 256 in the RHEL5 kernel.

Severity   : enhancement
Bugzilla   : 22194
Description: lfs quota output is not very convenient for awk/sed-parsing
Details    : Some positions in lfs quota output table could be empty or
	     non-empty which made it hard to parse it with scripts, now
	     a dash is put instead of space where there is not supposed